--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,25 +1,12 @@
 ext {
-    parcelerVersion = "1.1.12-SNAPSHOT"
-    robolectricVersion = "4.4-SNAPSHOT"
-    robolectricShadowsSupportVersion = "4.3"
     daggerVersion = "2.23.1"
-    mockitoVersion = "2.27.0"
-    espressoVersion = "3.1.0"
-    rulesVersion = "1.1.0"
     androidxVersion = "1.0.2"
     materialVersion = "1.1.0-alpha07"
     cardViewVersion = "1.0.0"
     supportLibraryVersion = "1.0.0"
     retrofitVersion = "2.4.0"
     okhttpVersion = "3.11.0"
-    playServicesVersion = "16.0.1"
-    segmentVersion = "4.3.0-RC1"
-    ankoVersion = "0.10.8"
-    chuckVersion = "1.1.0"
-    zxingVersion = "3.6.0"
-    glideVersion = "4.9.0"
-    coreVersion = "1.0.0"
-    zoomableImageViewVersion = "2.0.0"
+    constraintLayoutVersion = "1.1.3"
 
     libs = [
 
@@ -34,8 +21,6 @@ ext {
             cardview: "androidx.cardview:cardview:$rootProject.cardViewVersion",
 
             okhttp: "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion",
-            loggingInterceptor: "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttpVersion",
-            okhttpUrlConnection: "com.squareup.okhttp3:okhttp-urlconnection:$rootProject.okhttpVersion",
 
             apolloRuntime: "com.apollographql.apollo:apollo-runtime:$rootProject.apolloVersion",
             apolloRx2Support: "com.apollographql.apollo:apollo-rx2-support:$rootProject.apolloVersion",
@@ -47,23 +32,15 @@ ext {
             // RxJava
             rxjava: 'io.reactivex.rxjava2:rxjava:2.1.13',
             rxandroid: 'io.reactivex.rxjava2:rxandroid:2.0.2',
-            rxbindingKotlin: 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0',
-
 
             // Kotlin
             kotlinStdlibJdk7: "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.kotlinVersion",
-            ankoCommon: "org.jetbrains.anko:anko-commons:$rootProject.ankoVersion",
-            ankoAppcompatV7: "org.jetbrains.anko:anko-appcompat-v7:$rootProject.ankoVersion",
-            ankoSdk19: "org.jetbrains.anko:anko-sdk19:$rootProject.ankoVersion",
-
 
             // Constraint Layout
-            constraintLayout: 'androidx.constraintlayout:constraintlayout:1.1.3',
+            constraintLayout: "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion",
 
             // Events
             eventbus: 'org.greenrobot:eventbus:3.1.1',
-
-            jsr305: "com.google.code.findbugs:jsr305:3.0.1",
 
             kotlinReflect: "org.jetbrains.kotlin:kotlin-reflect:$rootProject.kotlinVersion",
     ]
